--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -36,7 +36,7 @@
 */
 
 // Define base and accent colors
-$base-color: #3498db;
+$base-color: #205d87;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
